--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sunset",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maria-ivaneiko.github.io/sunset",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "^5.0.0-alpha1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -17,7 +19,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "deploy": "gh-pages -b build -d public",
+    "deploy": "gh-pages -b build -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
