--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "deploy": "gh-pages -b build -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
