--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://maria-ivaneiko.github.io/sunset",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@react-google-maps/api": "^1.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
