--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^5.0.0-alpha1",
+    "firebase": "^8.1.2",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "swiper": "^6.3.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
